welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value maths
	if (nums(i-1)-nums(i-2)==5 && maths.abs((nums(i)-nums(i-2))) < 2)
                                      ^